@@ -129,3 +129,7 @@
 
 - Put the matrix 'mm' and the response vector 'y' into 'KNex', a list.
   Modified all examples and tests that used them and the Comparisons vignette.
+
+- rowSums(), colSums(), rowMeans & colMeans() now should work for all
+  sparse and dense matrices, via "dgeMatrix", "dgC*" and "dgT*".
+
